# dbugr_ai

./: .env.example  .gitignore  01_PRODUCT_BRIEF.md  02_ARCHITECTURE.md  03_DATABASE_SCHEMA.md  04_API_SPEC.md  05_AI_PROCESSING_PROMPTS.md  06_MCP_SERVER_SPEC.md  07_INTEGRATION_PLAN.md  08_BUILD_SEQUENCE.md  09_AGENT_TASK_TEMPLATE.md  10_ROADMAP.md  11_FIRST_IMPLEMENTATION_COMMAND.md  12_ACCEPTANCE_CRITERIA.md  AGENTS.md  CONTRIBUTING.md  CROSS_SITE_FOLLOW_UP.md  DESKTOP_APP_COMPLETION_PLAN.md  IMPLEMENTATION_PROGRESS.md  INSTALL.md  LICENSE  MASTER_INSTRUCTIONS.md  PRODUCT_DELTA_ANALYSIS.md  README.md  SECURITY.md  V3_REDESIGN_TEST.md  V3_STATUS.md  V3_WEEK2_SUMMARY.md  V3_WEEK3_SUMMARY.md  V3_WEEK3_TEST_GUIDE.md  package.json  pnpm-lock.yaml  tsconfig.base.json
.github/: PULL_REQUEST_TEMPLATE.md
apps/desktop/src-tauri/: Cargo.toml  Debugr.entitlements  Info.plist  build.rs  capabilities.json  tauri.conf.json
apps/desktop/src-tauri/.cargo/: config.toml
apps/desktop/src-tauri/capabilities/: main.json  overlay.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/scripts/: codesign-linker  postbundle-macos.sh  prebundle-macos.sh  setup.sh
apps/desktop/src-tauri/src/: macos_screencapturekit.m  main.rs
docs/: debugr-v2-e2e-prompts.md  design-system-dbugr.md  desktop-regression-ledger.md  install-for-mac-users.md  local-development.md  native-macos-migration.md  phase-2-social-refinement-plan.md  phase-roadmap-and-architecture.md  phase2-auth-and-admin-test-plan.md  railway-deployment.md  releasing-macos.md
scripts/: install-macos.sh  (+2 more)
(+133 files in other folders)
