[package]
name = "feedbackagent-desktop"
version = "0.0.1"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }
cc = "1"

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-screenshots = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "time"] }
png = "0.17"
objc = "0.2"
dirs-next = "2"
base64 = "0.22"
core-graphics = "0.25"
tauri-plugin-macos-permissions = "2.3.0"
xcap = "0.3.3"

[features]
default = []
